Создан примерный технический дизайн

--- a/InclusiveEducationApp/MainWindow.xaml
+++ b/InclusiveEducationApp/MainWindow.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:InclusiveEducationApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" MinHeight="450" MinWidth="800" WindowStartupLocation="CenterScreen">
     <Grid>
-
+        <Frame x:Name="mainFrame" NavigationUIVisibility="Hidden">
+            
+        </Frame>
     </Grid>
 </Window>
