--- a/InclusiveEducationApp/Pages/UploadFilePage.xaml
+++ b/InclusiveEducationApp/Pages/UploadFilePage.xaml
@@ -8,7 +8,7 @@
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UploadFilePage">
 
-    <Grid>
-        
+    <Grid Background="White">
+        <Button x:Name="upload_xlxs_file" Content="Загрузить файл" Width="250" Height="30" Click="upload_xlxs_file_Click"/>
     </Grid>
 </Page>
